; ModuleID = '/home/carl/AnghaBench/git/extr_diff.c_new_blank_line_at_eof.c'
source_filename = "/home/carl/AnghaBench/git/extr_diff.c_new_blank_line_at_eof.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.emit_callback = type { i32, i64, i64, i64, i64 }

@WS_BLANK_AT_EOF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.emit_callback*, i8*, i32)* @new_blank_line_at_eof to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @new_blank_line_at_eof(%struct.emit_callback* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.emit_callback*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store %struct.emit_callback* %0, %struct.emit_callback** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load %struct.emit_callback*, %struct.emit_callback** %5, align 8
  %9 = getelementptr inbounds %struct.emit_callback, %struct.emit_callback* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = load i32, i32* @WS_BLANK_AT_EOF, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %40

14:                                               ; preds = %3
  %15 = load %struct.emit_callback*, %struct.emit_callback** %5, align 8
  %16 = getelementptr inbounds %struct.emit_callback, %struct.emit_callback* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %40

19:                                               ; preds = %14
  %20 = load %struct.emit_callback*, %struct.emit_callback** %5, align 8
  %21 = getelementptr inbounds %struct.emit_callback, %struct.emit_callback* %20, i32 0, i32 2
  %22 = load i64, i64* %21, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %40

24:                                               ; preds = %19
  %25 = load %struct.emit_callback*, %struct.emit_callback** %5, align 8
  %26 = getelementptr inbounds %struct.emit_callback, %struct.emit_callback* %25, i32 0, i32 1
  %27 = load i64, i64* %26, align 8
  %28 = load %struct.emit_callback*, %struct.emit_callback** %5, align 8
  %29 = getelementptr inbounds %struct.emit_callback, %struct.emit_callback* %28, i32 0, i32 3
  %30 = load i64, i64* %29, align 8
  %31 = icmp sle i64 %27, %30
  br i1 %31, label %32, label %40

32:                                               ; preds = %24
  %33 = load %struct.emit_callback*, %struct.emit_callback** %5, align 8
  %34 = getelementptr inbounds %struct.emit_callback, %struct.emit_callback* %33, i32 0, i32 2
  %35 = load i64, i64* %34, align 8
  %36 = load %struct.emit_callback*, %struct.emit_callback** %5, align 8
  %37 = getelementptr inbounds %struct.emit_callback, %struct.emit_callback* %36, i32 0, i32 4
  %38 = load i64, i64* %37, align 8
  %39 = icmp sle i64 %35, %38
  br i1 %39, label %41, label %40

40:                                               ; preds = %32, %24, %19, %14, %3
  store i32 0, i32* %4, align 4
  br label %48

41:                                               ; preds = %32
  %42 = load i8*, i8** %6, align 8
  %43 = load i32, i32* %7, align 4
  %44 = load %struct.emit_callback*, %struct.emit_callback** %5, align 8
  %45 = getelementptr inbounds %struct.emit_callback, %struct.emit_callback* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 8
  %47 = call i32 @ws_blank_line(i8* %42, i32 %43, i32 %46)
  store i32 %47, i32* %4, align 4
  br label %48

48:                                               ; preds = %41, %40
  %49 = load i32, i32* %4, align 4
  ret i32 %49
}

declare dso_local i32 @ws_blank_line(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
